--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,7 +25,7 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     Bolt\:
         resource: '../src/*'
-        exclude: '../src/{Entity,Exception,Kernel.php}'
+        exclude: '../src/{Entity,Exception,Migrations,Kernel.php}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
