Allow configuration of web root folder

--- a/.env.dist
+++ b/.env.dist
@@ -34,19 +34,12 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\\.0\\.0\\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
-
-# blackfire access tokens for performance measurement
-BLACKFIRE_CLIENT_ID=
-BLACKFIRE_CLIENT_TOKEN=
-BLACKFIRE_SERVER_ID=
-BLACKFIRE_SERVER_TOKEN=
-BLACKFIRE_LOG_LEVEL=0
 
 ###> php-translation/loco-adapter ###
 LOCO_PROJECT_API_KEY=
