--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,7 @@ services:
             $locales: '%app_locales%'
             $emailSender: '%app.notifications.email_sender%'
             $projectDir: '%kernel.project_dir%'
+            $publicFolder: '%bolt.public_folder%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
