Guesstimate record author if not set

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -48,6 +48,7 @@ services:
     Bolt\Event\Listener\ContentFillListener:
         tags:
             - { name: doctrine.event_listener, event: postLoad }
+            - { name: doctrine.event_listener, event: prePersist }
 
     Bolt\Event\Listener\FieldDiscriminatorListener:
         tags:
