Typo in `.env.dist`

--- a/.env.dist
+++ b/.env.dist
@@ -12,7 +12,7 @@ APP_SECRET=73fd814e2c9fbf61dc5f87a62967d829
 
 ###> doctrine/doctrine-bundle ###
 
-# uncomment the appropiate line(s) below to set the database using a DSN (data source name)
+# Uncomment the appropriate line(s) below to set the database using a DSN (data source name)
 # Replace `db_user`, `db_password` and `db_name` where needed. Depending on your server settings,
 # you might also need to configure the host ("localhost" / "127.0.0.1") or the port number ("3306")
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
