--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,6 +21,7 @@ services:
             $emailSender: '%app.notifications.email_sender%'
             $projectDir: '%kernel.project_dir%'
             $publicFolder: '%bolt.public_folder%'
+            $tablePrefix: '%bolt.table_prefix%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -41,7 +42,6 @@ services:
             $debug: '%kernel.debug%'
 
     Bolt\Doctrine\TablePrefix:
-        arguments: [ "%bolt.table_prefix%" ]
         tags:
             - { name: doctrine.event_listener, event: loadClassMetadata, lazy: true }
 
@@ -53,9 +53,6 @@ services:
     Bolt\Event\Listener\FieldDiscriminatorListener:
         tags:
             - { name: doctrine.event_listener, event: loadClassMetadata }
-
-    Bolt\Event\Subscriber\TimedPublishSubscriber:
-        arguments: [ "%bolt.table_prefix%" ]
 
     Bolt\Extension\RoutesLoader:
         tags: [routing.loader]
