--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
         "white-october/pagerfanta-bundle": "^1.3"
     },
     "conflict": {
-        "symfony/symfony": "*"
+        "symfony/symfony": "*",
+        "phpstan/phpstan": "0.12.15"
     },
     "require-dev": {
         "ext-curl": "*",
