--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -149,7 +149,7 @@ thumbnails:
 # actual folders/files.
 #
 # - If they are the same user, use `0744` for folders and `0644` for files.
-# - If they’re in the same group, use use 0774 for folders and `0664` for files.
+# - If they’re in the same group, use use `0774` for folders and `0664` for files.
 # - If you don't know, or you can't make it work otherwise, then use `0777` for folders and `0666` for files.
 filepermissions:
     folders: 0774
