Compose value works with allowed yaml key names + i18n

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -138,7 +138,7 @@ entries:
     relations:
         pages:
             multiple: false
-            order: title
+            order: heading
             label: Select a page
     taxonomy: [ categories, tags, groups ]
     record_template: entry.twig
