--- a/config/bolt/taxonomy.yaml
+++ b/config/bolt/taxonomy.yaml
@@ -8,6 +8,7 @@ tags:
     postfix: "Add some freeform tags. Start a new tag by typing a comma or space."
     allow_spaces: false
     #listing_template: tag-listing.twig #custom template
+    required: false
 
 groups:
     slug: groups
@@ -15,6 +16,7 @@ groups:
     behaves_like: grouping
     options: { main: "The main group", meta: "Meta group", other: "The other stuff" }
     has_sortorder: true
+    required: false
 
 categories:
     name: Categories
@@ -24,3 +26,4 @@ categories:
     behaves_like: categories
     multiple: true
     options: [ news, events, movies, music, books, life, love, fun ]
+    required: false
