--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -196,7 +196,7 @@ showcases:
         image:
             type: image
             extensions: [ gif, jpg, png ]
-            alt: false
+            alt: true
             placeholder: https://source.unsplash.com/1280x768/?animal,koala,kitten,puppy,cute/__random__
         imagelist:
             type: imagelist
