--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,8 @@ parameters:
     # This parameter defines the codes of the locales (languages) enabled in the application
     app_locales: en|nl|es|fr|de|pl|it|hu|pt_BR|ja|nb|nn|nl_NL|nl_BE|is|ru
     app.notifications.email_sender: anonymous@example.com
-    bolt.table_prefix: bolt_
+    app.table_prefix:
+        default: bolt_
     bolt.backend_url: /bolt
 
 services:
@@ -21,7 +22,7 @@ services:
             $emailSender: '%app.notifications.email_sender%'
             $projectDir: '%kernel.project_dir%'
             $publicFolder: '%bolt.public_folder%'
-            $tablePrefix: '%bolt.table_prefix%'
+            $tablePrefixes: '%app.table_prefix%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
