Add initial support for `allow_twig: true`

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -301,6 +301,7 @@ blocks:
         content:
             type: html
             height: 150px
+            allow_twig: true
         content_link:
             type: text
             label: Link
@@ -312,7 +313,7 @@ blocks:
             order: title
             label: Select a page
     show_on_dashboard: true
-    viewless: true
+    viewless: false
     searchable: false
     icon_many: "fa:cubes"
     icon_one: "fa:cube"
