--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -60,14 +60,15 @@ omit_backgrounds: true
 #favicon: images/favicon-bolt.ico
 
 # The default content to use for the homepage, and the template to render it
-# with. This can either be a specific record (like `page/1`) or a listing of
-# records (like `entries`). In the chosen homepage_template, you will have
-# `record` or `records` at your disposal, depending on the homepage setting.
+# with. This can either be a singleton like `homepage`, a specific record (like
+# `page/1`) or a listing of records (like `entries`). In the chosen
+# homepage_template, you will have `record` or `records` at your disposal,
+# depending on the homepage setting.
 #
 # Note: If you've changed the filename, and your changes do not show up on
-#       the website, be sure to check for a theme.yml file in your themes
+#       the website, be sure to check for a theme.yaml file in your themes
 #       folder. If a template is set there, it will override the setting here.
-homepage: homepage/1
+homepage: homepage
 homepage_template: index.twig
 
 # The default content for the 404 page. Can be an (array of) template names or
