Tweaking a bunch of small things

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -261,6 +261,8 @@ showcases:
                             type: text
                 textarea:
                     type: textarea
+                imagelist:
+                    type: imagelist
     relations:
         entries:
             multiple: false
