Files extras tests

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -357,6 +357,8 @@ tests:
         picture:
             type: image
             postfix: An image, named differently.
+        attachment:
+            type: file
         markdown_field:
             type: markdown
         textarea_field:
