sudo composer self-update

--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Initialise
         run: |
-          composer self-update -q
+          sudo composer self-update -q
 
       - name: Install dependencies
         run: |
