--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -18,7 +18,7 @@ jobs:
       - uses: nanasess/setup-chromedriver@master
       - uses: actions/setup-node@v1
         with:
-          - node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node-version }}
 
       - name: Initialise
         run: |
