Split jobs for readibility

--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false # do not cancel 7.2 if 7.3 fails
       matrix:
         php: ['7.2', '7.3', '7.4']
         node-version: ['12.5']
@@ -45,32 +46,43 @@ jobs:
           sleep 3
           wget "http://127.0.0.1:8088/bolt/login"
 
-      - name: Run checks and tests
+      - name: this checks that the source code follows the Bolt Code Syntax rules
         run: |
-          # this checks that the source code follows the Bolt Code Syntax rules
           - ./vendor/bin/ecs check src
           - ./vendor/bin/phpstan analyse -c phpstan.neon src
-          # run EsLint on Javascript files
-          - npm run lint
-          # run StyleLint on SCSS
-          - npm run stylelint
-          # this checks that the YAML config files contain no syntax errors
-          - ./bin/console lint:yaml config
-          # this checks that the Twig template files contain no syntax errors
-          - ./bin/console lint:twig templates
-          # this checks that the XLIFF translations contain no syntax errors
-          - ./bin/console lint:xliff translations
-          # this checks that the application doesn't use dependencies with known security vulnerabilities
-          - ./bin/console security:check
-          # this checks that the composer.json and composer.lock files are valid
-          # - composer validate --strict # temporarily disabled bue to bug in api platform 2.4.0-beta.2
-          # this checks that Doctrine's mapping configurations are valid
-          - ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
-          # run PHP Unit
-          - ./vendor/bin/phpunit
-          # run API tests
-          - make behat-api-quiet
-          # run JS e2e tests
-          - ./run_behat_tests.sh && make behat-js-quiet
-          # Upload Behat logs
-          - ./vendor/bin/upload-textfiles "var/log/behat-reports/*.log"
+
+      - name: run EsLint on Javascript files
+        run: npm run lint
+
+      - name: run StyleLint on SCSS
+        run: npm run stylelint
+
+      - name: this checks that the YAML config files contain no syntax errors
+        run: ./bin/console lint:yaml config
+
+      - name: this checks that the Twig template files contain no syntax errors
+        run: ./bin/console lint:twig templates
+
+      - name: this checks that the XLIFF translations contain no syntax errors
+        run: ./bin/console lint:xliff translations
+
+      - name: this checks that the application doesn't use dependencies with known security vulnerabilities
+        run: ./bin/console security:check
+
+      - name: this checks that the composer.json and composer.lock files are valid
+        run: composer validate --strict # temporarily disabled due to bug in api platform 2.4.0-beta.2
+
+      - name: this checks that Doctrine's mapping configurations are valid
+        run: ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
+
+      - name: run PHP Unit
+        riun: ./vendor/bin/phpunit
+
+      - name: run API tests
+        run: make behat-api-quiet
+
+      - name: run JS e2e tests
+        run: ./run_behat_tests.sh && make behat-js-quiet
+
+      - name: Upload Behat logs
+        run: ./vendor/bin/upload-textfiles "var/log/behat-reports/*.log"
