--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -29,6 +29,7 @@ jobs:
         run: |
           sudo COMPOSER_MEMORY_LIMIT=-1 composer update --prefer-dist --no-progress
           ./bin/console bolt:info
+          npm set progress=false
           npm ci
           mkdir -p ./var/log/e2e-reports/report/features/
           touch ./var/log/e2e-reports/report/features/.gitkeep
@@ -36,8 +37,9 @@ jobs:
       - name: Prepare environment
         run: |
           # build assets
-          npm run build
+          npm run --silent build
           # prepare web server for e2e tests
+          chmod 775 /var/data/bolt.sqlite
           ./bin/console doctrine:database:create
           ./bin/console doctrine:schema:create
           ./bin/console doctrine:fixtures:load --group=without-images -n
