--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -38,7 +38,7 @@ jobs:
         run: |
           # build assets
           npm run build
-          chmod -R 777 config/ public/files/ public/theme/ public/thumbs/ var/
+          sudo chmod -R 777 config/ public/files/ public/theme/ public/thumbs/ var/
           # prepare web server for e2e tests
           ./bin/console doctrine:database:create
           ./bin/console doctrine:schema:create
