--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -33,9 +33,10 @@ jobs:
           npm ci
           mkdir -p ./var/log/e2e-reports/report/features/
           touch ./var/log/e2e-reports/report/features/.gitkeep
-          # Install Chrome for e2e tests
+          # Install latest stable Chrome for e2e tests
+          sudo apt-get install libxss1 libappindicator1 libindicator7
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          sudo apt install ./google-chrome*.deb
 
 
 
