--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -90,7 +90,7 @@ jobs:
         run: make behat-api-quiet
 
       - name: run JS e2e tests
-        run: ./run_behat_tests.sh && make behat-js
+        run: ./run_behat_tests.sh && make behat-js-quiet
 
       - name: Upload Behat logs
         run: ./vendor/bin/upload-textfiles "var/log/behat-reports/*.log"
