--- a/.github/workflows/code_checks.yaml
+++ b/.github/workflows/code_checks.yaml
@@ -38,8 +38,6 @@ jobs:
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install ./google-chrome*.deb
 
-
-
       - name: Prepare environment
         run: |
           # build assets
@@ -90,7 +88,7 @@ jobs:
         run: make behat-api-quiet
 
       - name: run JS e2e tests
-        run: ./run_behat_tests.sh && make behat-js-quiet
+        run: ./run_behat_tests.sh && make behat-js
 
       - name: Upload Behat logs
         run: ./vendor/bin/upload-textfiles "var/log/behat-reports/*.log"
