NPM Updates, fixing tests

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "axios": "^0.19.2",
     "baguettebox.js": "^1.11.1",
     "bootbox": "^5.4.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "codemirror": "^5.53.2",
     "dropzone": "^5.7",
-    "flagpack": "^1.0.4",
-    "jquery": "^3.5.0",
+    "flagpack": "^1.0.5",
+    "jquery": "^3.5.1",
     "locutus": "^2.0.11",
-    "luxon": "^1.23.0",
+    "luxon": "^1.24.1",
     "no-scroll": "^2.1.1",
     "node-vibrant": "^3.1.5",
     "popper.js": "^1.16.1",
@@ -45,40 +45,40 @@
     "selectize": "^0.12.6",
     "simplemde": "^1.11.2",
     "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-scss": "^3.17.1",
-    "terser": "^4.6.12",
+    "stylelint-scss": "^3.17.2",
+    "terser": "^4.6.13",
     "tinycolor2": "^1.4.1",
     "vue": "^2.6.11",
     "vue-flatpickr-component": "^8.1.5",
     "vue-multiselect": "^2.1.6",
-    "vue-simplemde": "^1.0.4",
+    "vue-simplemde": "^1.0.5",
     "vue-trumbowyg": "^3.6.0",
     "vuedraggable": "^2.23.2",
-    "vuex": "^3.3.0",
+    "vuex": "^3.4.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/plugin-transform-regenerator": "^7.8.7",
-    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-env": "^7.9.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@symfony/webpack-encore": "^0.29.1",
-    "@vue/test-utils": "^1.0.0-beta.33",
+    "@vue/test-utils": "^1.0.2",
     "ajv-keywords": "^3.4.1",
     "autoprefixer": "^9.7.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.4.0",
+    "babel-jest": "^25.5.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
-    "jest": "^25.4.0",
+    "jest": "^25.5.4",
     "jest-serializer-vue": "^2.0.2",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
@@ -88,7 +88,7 @@
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0",
     "vue-jest": "^3.0.5",
-    "vue-loader": "^15.9.1",
+    "vue-loader": "^15.9.2",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
     "webpackbar": "^4.0.0",
